--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cadical"]
 	path = cadical
 	url = https://github.com/arminbiere/cadical.git
+[submodule "drat-trim"]
+	path = drat-trim
+	url = https://github.com/marijnheule/drat-trim
